Fix textarea fluent control label positioning with vertical scrollbar

--- a/shared/scss/components/ckan/form.scss
+++ b/shared/scss/components/ckan/form.scss
@@ -29,7 +29,8 @@ form {
       &:not(.group-label) {
         display: inline;
         position: absolute;
-        right: 10px;
+        right: 20px;
+        top: 8px;
         z-index: 2;
       }
     }
